k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mbsrn-redis
  namespace: mbsrn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mbsrn-redis
  template:
    metadata:
      labels:
        app: mbsrn-redis
    spec:
      containers:
        - name: redis
          image: redis:7.2-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
          args:
            - redis-server
            - --save
            - ""
            - --appendonly
            - "no"
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
              ephemeral-storage: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
              ephemeral-storage: "256Mi"
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 15
            periodSeconds: 20
