k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mbsrn-ui
  namespace: mbsrn
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mbsrn-ui
  template:
    metadata:
      labels:
        app: mbsrn-ui
    spec:
      serviceAccountName: mbsrn-ui
      containers:
        - name: mbsrn-ui
          image: __UI_IMAGE__
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: __UI_CPU_REQUEST__
              memory: __UI_MEMORY_REQUEST__
              ephemeral-storage: __UI_EPHEMERAL_STORAGE_REQUEST__
            limits:
              cpu: __UI_CPU_LIMIT__
              memory: __UI_MEMORY_LIMIT__
              ephemeral-storage: __UI_EPHEMERAL_STORAGE_LIMIT__
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
