k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mbsrn-redis
  namespace: mbsrn
spec:
  type: ClusterIP
  selector:
    app: mbsrn-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
