k8s/www-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mbsrn-www
  namespace: mbsrn
spec:
  type: ClusterIP
  selector:
    app: mbsrn-www
  ports:
    - name: http
      port: 80
      targetPort: 8080
