k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mbsrn-ingress
  namespace: mbsrn
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: mbsrn-prod-static-ip
    networking.gke.io/managed-certificates: mbsrn-app-managed-cert
    networking.gke.io/v1beta1.FrontendConfig: mbsrn-app-frontend-config
spec:
  rules:
    - host: app.mbsrn.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mbsrn-api
                port:
                  number: 80
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: mbsrn-api
                port:
                  number: 80
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: mbsrn-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mbsrn-ui
                port:
                  number: 80
